--- a/app/views/sitrep/index.html.erb
+++ b/app/views/sitrep/index.html.erb
@@ -1,5 +1,5 @@
 <!-- Sitrep Page with Site Color Scheme -->
-<section class="py-20 bg-white">
+<section class="py-20 bg-vintage-cream">
   <div class="container-11b">
     <!-- Hero Section -->
     <div class="text-center mb-16">
