--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <!-- About Page -->
-<section class="py-20 bg-white">
+<section class="py-20 bg-vintage-cream">
   <div class="container-11b">
     <!-- Hero Section -->
     <div class="text-center mb-16">
