--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -1,5 +1,5 @@
 <!-- Services Page -->
-<section class="py-20 bg-white">
+<section class="py-20 bg-vintage-cream">
   <div class="container-11b">
     <!-- Header -->
     <div class="text-center mb-16">
