--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -37,7 +37,7 @@
             </div>
             <div>
               <h3 class="font-semibold text-dark-olive">GitHub</h3>
-              <a href="https://github.com/11bDev-FOB" class="text-muted-blue hover:text-olive transition-colors" target="_blank">
+              <a href="https://github.com/11bDev" class="text-muted-blue hover:text-olive transition-colors" target="_blank">
                 @11bDev-FOB
               </a>
             </div>
