--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,13 +11,11 @@
         </h1>
         
         <p class="text-xl lg:text-2xl mb-8 text-medium-gray">
-          We left the Army but kept the mission-first mentality. Now we build 
-          <span class="text-olive font-semibold">simple clean tools that simplify our missions</span> 
-          (unlike most of Silicon Valley).
+          Look, I spent time in the Army. I know what "mission-first" really means. So when I started seeing how much tech just gets in the way, I had to fix it. I build the simple, clean tools that cut the crap and simplify your mission. No billion-dollar venture funding, just effective software built to help you adapt and overcome.
         </p>
         
         <div class="flex flex-col sm:flex-row gap-4">
-          <%= link_to "Check Out Our Products", projects_path, class: "btn-military text-center" %>
+          <%= link_to "Skunkworks", projects_path, class: "btn-military text-center" %>
           <%= link_to "Our Unconventional Story", about_path, class: "btn-hippie text-center" %>
         </div>
         
