--- a/app/views/sitrep/index.html.erb
+++ b/app/views/sitrep/index.html.erb
@@ -140,7 +140,7 @@
     <div class="text-center mt-12 pt-8 border-t border-gray-300">
       <div class="flex justify-center gap-6 text-sm">
         <%= link_to "⚡ Nostr: npub13hyx...", "https://njump.me/npub13hyx3qsqk3r7ctjqrr49uskut4yqjsxt8uvu4rekr55p08wyhf0qq90nt7", target: "_blank", rel: "noopener noreferrer", class: "text-olive hover:text-dark-olive" %>
-        <%= link_to "💻 GitHub Org", "https://github.com/11bDev-FOB/", target: "_blank", rel: "noopener noreferrer", class: "text-olive hover:text-dark-olive" %>
+        <%= link_to "💻 GitHub Org", "https://github.com/11bDev", target: "_blank", rel: "noopener noreferrer", class: "text-olive hover:text-dark-olive" %>
         <%= link_to "🏠 Home", root_path, class: "text-olive hover:text-dark-olive" %>
       </div>
     </div>
