--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -12,6 +12,7 @@
           <tr class="bg-light-tan text-dark-olive border-b">
             <th class="p-4 text-left font-semibold">Title</th>
             <th class="p-4 text-left font-semibold">Status</th>
+            <th class="p-4 text-left font-semibold">Published</th>
             <th class="p-4 text-left font-semibold">Updated</th>
             <th class="p-4 text-left font-semibold">Actions</th>
           </tr>
@@ -25,6 +26,13 @@
                   <span class="inline-block px-3 py-1 text-xs font-semibold text-white bg-olive rounded-full">Published</span>
                 <% else %>
                   <span class="inline-block px-3 py-1 text-xs font-semibold text-gray-700 bg-gray-200 rounded-full">Draft</span>
+                <% end %>
+              </td>
+              <td class="p-4 text-sm text-gray-600">
+                <% if post.published_at %>
+                  <%= post.published_at.strftime('%b %d, %Y') %>
+                <% else %>
+                  <span class="text-gray-400">Not published</span>
                 <% end %>
               </td>
               <td class="p-4 text-sm text-gray-600"><%= post.updated_at.strftime('%b %d, %Y') %></td>
