Add Open Graph and Twitter Card meta tags for social sharing
- Add set_meta_tags helper method to ApplicationHelper
- Add Open Graph meta tags (og:title, og:description, og:image, og:type, og:url)
- Add Twitter Card meta tags (summary_large_image format)
- Set dynamic meta tags for blog posts with title, excerpt, and featured image
- Set dynamic meta tags for projects with title, excerpt, and featured image
- Use @11bDev as Twitter creator/site handle
- Default to site icon.png when no featured image available
- Support for article type (blog posts) and website type (projects)

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,13 @@
+<% 
+  # Set meta tags for social sharing
+  set_meta_tags(
+    title: "#{@post.title} - Tales From the Foxhole",
+    description: @post.excerpt,
+    image: @post.featured_image.attached? ? url_for(@post.featured_image) : nil,
+    type: 'article'
+  )
+%>
+
 <!-- Blog Post Detail: Tales from the Foxhole - Minimal Style -->
 <section class="py-20 bg-vintage-cream min-h-screen">
   <div class="max-w-2xl mx-auto px-4 sm:px-6">
