--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>11b Dev - Battle-tested code, crafted with soul</title>
+    <title><%= @meta_title || "11b Dev - Battle-tested code, crafted with soul" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="11b Dev - Indie Ruby on Rails development shop founded by a retired Infantry NCO. We build apps tougher than a rucksack march, with the soul of a Dead jam.">
+    <meta name="description" content="<%= @meta_description || "11b Dev - Indie Ruby on Rails development shop founded by a retired Infantry NCO. We build apps tougher than a rucksack march, with the soul of a Dead jam." %>">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="<%= @meta_type || 'website' %>">
+    <meta property="og:url" content="<%= request.original_url %>">
+    <meta property="og:title" content="<%= @meta_title || "11b Dev - Battle-tested code, crafted with soul" %>">
+    <meta property="og:description" content="<%= @meta_description || "11b Dev - Indie Ruby on Rails development shop founded by a retired Infantry NCO." %>">
+    <meta property="og:image" content="<%= @meta_image || "#{request.base_url}/icon.png" %>">
+    <meta property="og:site_name" content="11b Dev">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@11bDev">
+    <meta name="twitter:creator" content="@11bDev">
+    <meta name="twitter:url" content="<%= request.original_url %>">
+    <meta name="twitter:title" content="<%= @meta_title || "11b Dev - Battle-tested code, crafted with soul" %>">
+    <meta name="twitter:description" content="<%= @meta_description || "11b Dev - Indie Ruby on Rails development shop founded by a retired Infantry NCO." %>">
+    <meta name="twitter:image" content="<%= @meta_image || "#{request.base_url}/icon.png" %>">
 
     <%= yield :head %>
 
